gitops/apps/envoy-gateway-resources/httproute-hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  parentRefs:
  - name: homelab-gateway
  hostnames:
  - "hubble.homelab.local"
  rules:
  - backendRefs:
    - name: hubble-ui-lb
      namespace: kube-system
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: hubble-backend
  namespace: kube-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
    name: hubble-ui-lb
